[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["ryomashita <86085692+ryomashita@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
