[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["ryomashita <86085692+ryomashita@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
python-multipart = "^0.0.9"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
